--- a/tutorials.qmd
+++ b/tutorials.qmd
@@ -46,11 +46,36 @@ From the list of options for project templates, **select "Quarto Website".**
 
 After a few seconds, RStudio should refresh with a Quarto document (such documents have the file extension ".qmd") and a "_quarto.yml" file open.
 
-<img src="images/tutorial_quarto/website-tutorial_new-proj-5.png" width = "60%" />
+<img src="images/tutorial_quarto/website-tutorial_new-proj-5.png" width = "75%" />
 
 Part of Quarto's central philosophy is that all of the formatting of individual .qmd files in a project is governed by the settings created by a singular .yml file. In an R markdown project some of the global settings are set in .yml but other settings are handled within each .Rmd file. This centralization is a key innovation in streamlining projects and is one reason for Quarto's quick popularity.
 
 ### Make a New GitHub Repository
+
+From your GitHub **"Repositories"** tab, click the **<span style="color:green"> green </span> "New"** button.
+
+<img src="images/tutorial_quarto/website-tutorial_new-github-1.png" width = "100%" />
+
+**Add a title** to your repository and **add a description**. Once you've added these two things, scroll down and click the **<span style="color:green"> green </span> "Create repository" button**.
+
+<img src="images/tutorial_quarto/website-tutorial_new-github-2.png" width = "60%" />
+
+Be sure that you **do not add a README**, **do not add a gitignore**, and **do not add a license**. Adding any of these three will cause a merge conflict when we link the project that you just created with the GitHub repository that you are in the process of creating.
+
+<img src="images/tutorial_quarto/website-tutorial_new-github-3.png" width = "60%" />
+
+After a few seconds you should be placed on your new repository's landing page which will look like the below image because there isn't anything in your repository (yet).
+
+Copy the link in the field and go back to your RStudio session.
+
+<img src="images/tutorial_quarto/website-tutorial_new-github-4.png" width = "100%" />
+
+### Preparing Project for Web Deployment
+
+
+Changing `output-dir`
+
+Plus `touch .nojekyll` in Terminal
 
 
 ### Adding your Project to GitHub
@@ -61,13 +86,7 @@ Part of Quarto's central philosophy is that all of the formatting of individual 
 # NO PICS
 ```
 
-### Preparing Project for Web Deployment
-
-
-Changing `output-dir`
-
-Plus `touch .nojekyll` in Terminal
-
+If you prefer, GitHub also created [its own instructions](https://docs.github.com/en/get-started/importing-your-projects-to-github/importing-source-code-to-github/adding-locally-hosted-code-to-github#adding-a-local-repository-to-github-using-git) for exactly this process.
 
 ### Deploy Website via GitHub
 
